--- a/app/pages/index.jade
+++ b/app/pages/index.jade
@@ -1,6 +1,8 @@
 extends /blocks/layout-default/layout-default
+include /blocks/page-main/page-main
 
 block head
 	- var pageTitle = 'CSSSR Project Template';
 
 block content
+	+page-main()
