--- a/app/styles/helpers/fonts.styl
+++ b/app/styles/helpers/fonts.styl
@@ -57,3 +57,12 @@
 		url('../fonts/Oswald-Medium.ttf') format('truetype')
 	font-weight 500
 	font-style normal
+
+@font-face
+	font-family 'PTSans'
+	src url('../fonts/PTSans-Regular.eot')
+	src url('../fonts/PTSans-Regular.eot?iefix') format('eot'),
+		url('../fonts/PTSans-Regular.woff') format('woff'),
+		url('../fonts/PTSans-Regular.ttf') format('truetype')
+	font-weight 400
+	font-style normal
