--- a/app/blocks/header-main/header-main.styl
+++ b/app/blocks/header-main/header-main.styl
@@ -1,4 +1,61 @@
-.page-main
-	&__header-wrap
-		background-image url('/assets/images/header-bg.jpg')
-		background-size cover
+.header-main
+	margin-top 40px
+	width 70%
+
+	&__path
+		display flex
+	&__item
+		margin-right -5px
+		padding 4px 31px
+		height 30px
+		font-family 'Oswald'
+		font-size 15px
+		line-height 20px
+		background-image url('/assets/images/shevron.png')
+		background-repeat no-repeat
+		background-size contain
+
+	&__title
+		margin-top 45px
+		font-family 'Oswald'
+		font-size 55px
+		font-weight 500
+		line-height 60px
+
+
+	// стили для плохо работающего варианта - не растягиваются нормально шевроны
+	// &__path
+	// 	position relative
+	// 	margin-left 10px
+	// 	display flex
+	// &__wrap
+	// 	margin-right 10px
+	// 	display flex
+	// 	width 100%
+	// &__item
+	// 	position relative
+	// 	width 100%
+	// 	height 30px
+		
+	// 	&:before,
+	// 	&:after
+	// 		position absolute
+	// 		left 0
+	// 		width 100%
+	// 		height 50%
+	// 		content ''
+	// 		background #ffffff
+	// 	&:before
+	// 		top 0
+	// 		transform skew(40deg, 0deg)
+	// 	&:after
+	// 		top 50%
+	// 		transform skew(-40deg, 0deg)
+	// &__text
+	// 	position absolute
+	// 	top 50%
+	// 	padding-left 20px
+	// 	font-family 'Oswald'
+	// 	font-size 14px
+	// 	line-height 23px
+	// 	transform translateY(-50%)
