--- a/app/blocks/page-main/page-main.styl
+++ b/app/blocks/page-main/page-main.styl
@@ -3,3 +3,6 @@
 	font-size 20px
 	line-height 35px
 	color #272f31
+	&__header-wrap
+		background-image url('/assets/images/header-bg.jpg')
+		background-size cover
