--- a/app/blocks/header-main/header-main.styl
+++ b/app/blocks/header-main/header-main.styl
@@ -13,7 +13,10 @@
 		line-height 20px
 		background-image url('/assets/images/shevron.png')
 		background-repeat no-repeat
-		background-size contain
+		background-size cover
+		background-position left center
+		// background-repeat no-repeat
+		// background-size contain
 
 	&__title
 		margin-top 45px
