--- a/app/blocks/page-main/page-main.jade
+++ b/app/blocks/page-main/page-main.jade
@@ -1,8 +1,10 @@
 include /blocks/container/container
 include /blocks/header/header
+include /blocks/main/main
 
 mixin page-main()
 	+b.page-main&attributes(attributes)
 		+e.header-wrap
 			+container()
 				+header()
+		+main()
