--- a/app/blocks/content/content.jade
+++ b/app/blocks/content/content.jade
@@ -1,4 +1,5 @@
 include /blocks/article/article
+include /blocks/repost/repost
 
 mixin content()
 	+b.content&attributes(attributes)
@@ -7,3 +8,4 @@ mixin content()
 			+e('p').views Просмотров:&nbsp;
 				+e('span').views-count 320
 		+article()
+		+repost()
