--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -1,5 +1,7 @@
 .slider
+	margin-top 112px // поменять когда поправится виджет ВК
 	&__title
+		margin-bottom 55px
 		font-family 'Oswald'
 		font-size 55px
 		font-weight 500
