--- a/app/blocks/head/head.jade
+++ b/app/blocks/head/head.jade
@@ -53,4 +53,7 @@ head
 	meta(name='description' content=pageDescription || '')
 	meta(name='keywords' content=pageKeywords || '')
 
+	script(src="https://vk.com/js/api/openapi.js?162" type="text/javascript")
+	script(type="text/javascript") VK.init({apiId: 7133610, onlyWidgets: true});
 	link(href='/assets/styles/app.min.css' rel='stylesheet')
+	
