--- a/app/blocks/page-main/page-main.styl
+++ b/app/blocks/page-main/page-main.styl
@@ -6,3 +6,5 @@
 	&__header-wrap
 		background-image url('/assets/images/header-bg.jpg')
 		background-size cover
+	&__form-wrap
+		background-color $blue
