--- a/app/blocks/repost/repost.jade
+++ b/app/blocks/repost/repost.jade
@@ -11,4 +11,4 @@ mixin repost()
 		+e('h3').title Статья оказалась полезной? Нажми на кнопку репоста в социальные сети, чтобы сохранить!
 		+messengers()
 		+vk-comment()
-		+slider()
+		//- +slider()
