--- a/app/blocks/page-main/page-main.jade
+++ b/app/blocks/page-main/page-main.jade
@@ -1,6 +1,7 @@
 include /blocks/container/container
 include /blocks/header/header
 include /blocks/main/main
+include /blocks/form/form
 
 mixin page-main()
 	+b.page-main&attributes(attributes)
@@ -8,3 +9,6 @@ mixin page-main()
 			+container()
 				+header()
 		+main()
+		+e.form-wrap
+			+container()
+				+form()
