Блок Популярные статьи

--- a/app/blocks/popular-articles/popular-articles.jade
+++ b/app/blocks/popular-articles/popular-articles.jade
@@ -1,2 +1,9 @@
 mixin popular-articles()
 	+b.popular-articles&attributes(attributes)
+		+e.title Популярные статьи
+		+e.item
+			+e('a').link Вся правда о второстепенных показателях в контекстной рекламе
+		+e.item
+			+e('a').link Вся правда о второстепенных показателях в контекстной рекламе
+		+e.item
+			+e('a').link Вся правда о второстепенных показателях в контекстной рекламе
