--- a/app/blocks/form/form.jade
+++ b/app/blocks/form/form.jade
@@ -12,7 +12,7 @@ mixin form()
 					+e.input-wrap
 						+e('img').input-img(src="/assets/images/phone-receiver.png")
 						+e('input').input._phone(type="text" placeholder="+7 (___) ___-__-__" name="user-phone")
-				+e.btn-wrap
-					+e('button').form-submit(type="submit") Хочу улучшить результаты
+				+e('button').form-submit(type="submit") 
+					+e('span').btn-wrap Хочу улучшить результаты
 				+e('p').conf Нажимая на кнопку, вы даете согласие на обработку своих персональных данных и соглашаетесь с 
 						+e('a').link(href="#") Политикой конфиденциальности
