--- a/app/blocks/header-main/header-main.jade
+++ b/app/blocks/header-main/header-main.jade
@@ -1,17 +1,13 @@
 mixin header-main()
 	+b.header-main&attributes(attributes)
 		+e.path
-			+e.item Главная
-			+e.item Авторский блог
-			+e.item Вся правда о второстепенных показателях в контекстной рекламе
-
-			//- +e.wrap
-			//- 	+e.item
-			//- 	+e.text Главная
-			//- +e.wrap
-			//- 	+e.item 
-			//- 	+e.text Авторский блог
-			//- +e.wrap
-			//- 	+e.item
-			//- 	+e.text Вся правда о второстепенных показателях в контекстной рекламе
+			+e.item 
+				| Главная
+				+e.item-arrow
+			+e.item 
+				| Авторский блог
+				+e.item-arrow
+			+e.item 
+				| Вся правда о второстепенных показателях в контекстной рекламе
+				+e.item-arrow
 		+e('h1').title Вся правда о второстепенных показателях в контекстной рекламе
