--- a/app/blocks/header-main/header-main.styl
+++ b/app/blocks/header-main/header-main.styl
@@ -5,18 +5,39 @@
 	&__path
 		display flex
 	&__item
-		margin-right -5px
-		padding 4px 31px
+		position relative
+		margin-left 17px
+		padding 4px 17px 4px 16px
 		height 30px
 		font-family 'Oswald'
 		font-size 15px
 		line-height 20px
-		background-image url('/assets/images/shevron.png')
-		background-repeat no-repeat
-		background-position left center
-		background-size cover
-		// background-repeat no-repeat
-		// background-size contain
+		background #ffffff
+		&:not(:first-child)
+			margin-left 26px
+		&::before,
+		&::after
+			position absolute
+			left -16px
+			content ''
+		&::before
+			top 0
+			border 9px solid #ffffff
+			border-left 9px solid transparent
+			border-bottom 9px solid transparent
+		&::after
+			bottom 0
+			border 9px solid #ffffff
+			border-top 9px solid transparent
+			border-left 9px solid transparent
+	&__item-arrow
+		position absolute
+		top 0
+		right -23px
+		border-top 15px solid transparent
+		border-left 12px solid #ffffff
+		border-right 12px solid transparent
+		border-bottom 15px solid transparent
 
 	&__title
 		margin-top 45px
@@ -24,41 +45,3 @@
 		font-size 55px
 		font-weight 500
 		line-height 60px
-
-
-	// стили для плохо работающего варианта - не растягиваются нормально шевроны
-	// &__path
-	// 	position relative
-	// 	margin-left 10px
-	// 	display flex
-	// &__wrap
-	// 	margin-right 10px
-	// 	display flex
-	// 	width 100%
-	// &__item
-	// 	position relative
-	// 	width 100%
-	// 	height 30px
-		
-	// 	&:before,
-	// 	&:after
-	// 		position absolute
-	// 		left 0
-	// 		width 100%
-	// 		height 50%
-	// 		content ''
-	// 		background #ffffff
-	// 	&:before
-	// 		top 0
-	// 		transform skew(40deg, 0deg)
-	// 	&:after
-	// 		top 50%
-	// 		transform skew(-40deg, 0deg)
-	// &__text
-	// 	position absolute
-	// 	top 50%
-	// 	padding-left 20px
-	// 	font-family 'Oswald'
-	// 	font-size 14px
-	// 	line-height 23px
-	// 	transform translateY(-50%)
