Слайдер и letter-spasing

--- a/app/blocks/repost/repost.jade
+++ b/app/blocks/repost/repost.jade
@@ -6,9 +6,9 @@ include /blocks/slider/slider
 mixin repost()
 	+b.repost&attributes(attributes)
 		+e('p').descussion Появились какие-либо мысли по ходу чтения? Поделись ими в 
-			+e('a').descussion-link(href = "#") обсуждении блога ВК&nbsp;
-			| или в комментариях ниже! Это может быть отзывом, критикой, вопросом, уточнением, примером, несогласием, указанием на ошибку, благодарностью и т.д. Авторы самых интересных комментариев будут приглашены на бесплатную Skype-консультацию со мной
+			+e('a').descussion-link(href = "#") обсуждении блога ВК 
+			| или в комментариях ниже! <br /> Это может быть отзывом, критикой, вопросом, уточнением, примером, несогласием, указанием на ошибку, благодарностью и т.д. Авторы самых интересных комментариев будут приглашены на бесплатную Skype-консультацию со мной
 		+e('h3').title Статья оказалась полезной? <br /> Нажми на кнопку репоста в социальные сети, чтобы сохранить!
 		+messengers()
 		+vk-comment()
-		//- +slider()
+		+slider()
