--- a/app/blocks/table/table.jade
+++ b/app/blocks/table/table.jade
@@ -13,7 +13,7 @@ mixin table()
 			+e('td').cell._second-column Не заполняется и не редактируется
 			+e('td').cell Нет
 		+e('tr').row
-			+e('td').cell_title Версия OS
+			+e('td').cell_title Версия ОС
 			+e('td').cell._second-column Не заполняется и не редактируется
 			+e('td').cell Да
 		+e('tr').row
