--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -6,7 +6,7 @@
 		justify-content space-between
 		align-items flex-end
 	&__text
-		width 500px
+		width 499px
 	&__title
 		margin-bottom 32px
 		font-family 'Oswald'
@@ -19,6 +19,7 @@
 		font-size 24px
 		font-weight 400
 		line-height 35px
+		letter-spacing -.1px
 		color #ffffff
 	&__fields
 		margin-bottom 2px
@@ -68,7 +69,7 @@
 			height 24px
 			content ''
 			background-color #272f31
-			border-radius 10px
+			border-radius 8px
 			opacity .5
 	&__form-submit
 		margin-bottom 25px
