--- a/app/blocks/header-logo/header-logo.styl
+++ b/app/blocks/header-logo/header-logo.styl
@@ -9,6 +9,7 @@
 		padding-top 8px
 		width 258px
 		height 87px
+		letter-spacing .1px
 
 	&__title
 		padding-bottom 12px
@@ -16,7 +17,7 @@
 		font-size 30px
 		font-weight 400
 		line-height 30px
-
+		letter-spacing .1px
 		&_colored
 			color $blue
 
