--- a/app/blocks/header-main/header-main.styl
+++ b/app/blocks/header-main/header-main.styl
@@ -7,14 +7,17 @@
 	&__item
 		position relative
 		margin-left 17px
-		padding 4px 17px 4px 16px
+		padding 2px 14px 4px
 		height 30px
 		font-family 'Oswald'
 		font-size 15px
 		line-height 20px
+		letter-spacing -.2px
+		color #89909b
 		background #ffffff
 		&:not(:first-child)
-			margin-left 26px
+			margin-left 28px
+			padding-left 18px
 		&::before,
 		&::after
 			position absolute
