--- a/app/blocks/marked-list/marked-list.styl
+++ b/app/blocks/marked-list/marked-list.styl
@@ -5,6 +5,7 @@
 		font-family 'Oswald'
 		font-size 30px
 		font-weight 500
+		letter-spacing -.1px
 	&__list
 		margin-left 18px
 		list-style-position outside
