--- a/app/blocks/numered-list/numered-list.styl
+++ b/app/blocks/numered-list/numered-list.styl
@@ -5,6 +5,7 @@
 		font-family 'Oswald'
 		font-size 30px
 		font-weight 500
+		letter-spacing -.1px
 	&__list
 		list-style-type none
 		counter-reset number
