--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -1,8 +1,19 @@
 .slider
 	margin-top 112px // поменять когда поправится виджет ВК
+	margin-bottom 70px
 	&__title
 		margin-bottom 55px
 		font-family 'Oswald'
 		font-size 55px
 		font-weight 500
 		line-height 60px
+	&__slider-container
+		width 100%
+		height 330px
+	&__slide
+		width 100%
+	&__slide-title
+		padding-top 17px
+		font-weight bold
+		line-height 31px
+		letter-spacing .1px
