--- a/app/blocks/table/table.styl
+++ b/app/blocks/table/table.styl
@@ -3,6 +3,7 @@
 	overflow hidden
 	width 100%
 	font-size 18px
+	letter-spacing .2px
 	border-top-left-radius 10px
 	border-top-right-radius 10px
 
@@ -14,6 +15,7 @@
 		height 50px
 		font-family 'Oswald'
 		font-size 16px
+		letter-spacing .1px
 		text-align left
 		color #ffffff
 		background-color $blue
