--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -4,5 +4,6 @@ import('helpers/svg-size')
 @import 'helpers/mixins'
 @import 'helpers/fonts'
 @import 'helpers/optimize'
+@import '../../node_modules/swiper/dist/css/swiper.min.css'
 
 import('../blocks/**/*')
