--- a/app/blocks/header-main/header-main.styl
+++ b/app/blocks/header-main/header-main.styl
@@ -1,5 +1,5 @@
 .header-main
-	margin-top 40px
+	margin-top 29px
 	width 70%
 
 	&__path
@@ -43,7 +43,8 @@
 		border-bottom 15px solid transparent
 
 	&__title
-		margin-top 45px
+		margin-top 44px
+		margin-left -2px
 		font-family 'Oswald'
 		font-size 55px
 		font-weight 500
