--- a/app/blocks/logo/logo.styl
+++ b/app/blocks/logo/logo.styl
@@ -1,12 +1,14 @@
-.header-logo
+.logo
 	display flex
 	align-items center
 	
-	&__logo
+	&__link
+		cursor pointer
+	&__image
 		margin-right 37px
 
 	&__text
-		padding-top 8px
+		padding-top 2px
 		width 258px
 		height 87px
 		letter-spacing .1px
