--- a/app/blocks/messengers/messengers.styl
+++ b/app/blocks/messengers/messengers.styl
@@ -4,10 +4,13 @@
 		margin-right 15px
 		width 40px
 		height 40px
+		cursor pointer
 		background-color $blue
 		background-repeat no-repeat
 		background-position center
+		border none
 		border-radius 50%
+
 		&:nth-child(even)
 			background-color #49ace6
 		&_vk
