--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -1,5 +1,5 @@
 .slider
-	margin-top 112px // поменять когда поправится виджет ВК
+	margin-top 111px // поменять когда поправится виджет ВК
 	margin-bottom 70px
 	&__title
 		margin-bottom 55px
@@ -17,13 +17,17 @@
 		font-weight bold
 		line-height 31px
 		letter-spacing .1px
+	&__slide-link
+		text-decoration none
+		color #272f31
+		&:hover
+			text-decoration underline
 	&__img
 		position relative
 	&__btn-img
 		padding 16px 18px
-		background-color #edf1f7
+		background #edf1f7
 		border-radius 50%
-		transition background-color .3s ease-in
 		&:hover
 			background linear-gradient(#3c90f1, #2665ae)
 	&__btn-prev,
