--- a/app/blocks/button/button.styl
+++ b/app/blocks/button/button.styl
@@ -10,4 +10,7 @@
 	background-color transparent
 	border 1px solid $blue
 	border-radius 8px
+	transition background-color .3s ease-in
+	&:hover
+		background-color #f3f7fd
 	
