--- a/app/blocks/header-top/header-top.jade
+++ b/app/blocks/header-top/header-top.jade
@@ -1,7 +1,7 @@
-include /blocks/header-logo/header-logo
+include /blocks/logo/logo
 include /blocks/header-action/header-action
 
 mixin header-top()
 	+b.header-top&attributes(attributes)
-		+header-logo()
+		+logo()
 		+header-action()
