--- a/app/blocks/messengers/messengers.jade
+++ b/app/blocks/messengers/messengers.jade
@@ -1,7 +1,7 @@
 mixin messengers()
 	+b.messengers&attributes(attributes)
-		+e.img._vk
-		+e.img._telegram
-		+e.img._fb
-		+e.img._twitter
-		+e.img._link
+		+e('button').img._vk
+		+e('button').img._telegram
+		+e('button').img._fb
+		+e('button').img._twitter
+		+e('button').img._link
