--- a/app/blocks/repost/repost.styl
+++ b/app/blocks/repost/repost.styl
@@ -9,6 +9,8 @@
 		font-weight bold
 		text-decoration none
 		color $blue
+		&:hover
+			text-decoration underline
 	&__title
 		margin-top 39px
 		margin-bottom 31px
