--- a/app/blocks/footer/footer.styl
+++ b/app/blocks/footer/footer.styl
@@ -12,6 +12,9 @@
 	&__contacts
 		display flex
 		flex-direction column
+		justify-content space-around
+		height 98px
+
 	&__e-mail
 		font-size 15px
 		line-height 20px
