--- a/app/blocks/header-action/header-action.styl
+++ b/app/blocks/header-action/header-action.styl
@@ -11,13 +11,15 @@
 		display flex
 		align-items center
 	&__img
+		margin-top -7px
 		margin-right 15px
 		width 21px
 		height 17px
 	&__e-mail
 		margin-top -7px
 		font-size 15px
-		line-height 30px
+		line-height 18px
+		text-decoration none
 		color $blue
 		border-bottom 1px dashed #cfd8dc
 
@@ -29,7 +31,7 @@
 		background-color #ffffff
 		border-radius 50%
 	&__call
-		margin-top 5px
+		margin-top 4px
 		display flex
 		width 45%
 		justify-content space-between
