--- a/app/blocks/header-main/header-main.styl
+++ b/app/blocks/header-main/header-main.styl
@@ -12,6 +12,7 @@
 		font-family 'Oswald'
 		font-size 15px
 		line-height 20px
+		text-decoration none
 		letter-spacing -.2px
 		color #89909b
 		background #ffffff
@@ -33,6 +34,8 @@
 			border 9px solid #ffffff
 			border-top 9px solid transparent
 			border-left 9px solid transparent
+		&:hover
+			text-decoration underline
 	&__item-arrow
 		position absolute
 		top 0
