--- a/app/blocks/call/call.styl
+++ b/app/blocks/call/call.styl
@@ -18,3 +18,5 @@
 			background-image url('/assets/images/telegram1.png')
 		&_whatsapp
 			background-image url('/assets/images/whatsapp.png')
+	@media (max-width 1000px)
+		order 1
