--- a/app/blocks/copyrights/copyrights.styl
+++ b/app/blocks/copyrights/copyrights.styl
@@ -13,3 +13,17 @@
 			text-decoration underline
 	&__link+.copyrights__link
 		margin-left 25px
+	@media (max-width:750px)
+		flex-direction column
+		align-items center
+		flex-wrap wrap
+	@media (max-width:450px)
+		&__links
+			display flex
+			justify-content center
+			flex-wrap wrap
+		&__link
+			margin-right 20px
+		&__link+.copyrights__link
+			margin-left 0
+		
