--- a/app/blocks/footer-logo/footer-logo.styl
+++ b/app/blocks/footer-logo/footer-logo.styl
@@ -29,3 +29,8 @@
 		line-height 20px
 		text-align justify
 		color #89909b
+	@media (max-width 1170px)
+		&__text
+			display none
+	@media (max-width 1000px)
+		order 0
