--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -94,4 +94,32 @@
 		text-decoration underline
 		cursor pointer
 		color #ffffff
-
+	@media(max-width 1140px)
+		padding 20px 0
+		&__wrap
+			flex-wrap wrap
+			justify-content center
+		&__text
+			padding-bottom 20px
+			width 100%
+			text-align center
+	@media(max-width 650px)
+		&__title
+			margin-bottom 10px
+			font-size 35px
+		&__instructions
+			font-size 18px
+		&__inputs
+			margin-bottom 20px
+			flex-wrap wrap
+			justify-content center
+		&__input-wrap
+			margin-right 10px
+			margin-bottom 20px
+		@media(max-width 360px)
+			&__title
+				font-size 25px
+				line-height 35px
+			&__instructions
+				font-size 14px
+				line-height 25px
