--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -116,10 +116,16 @@
 		&__input-wrap
 			margin-right 10px
 			margin-bottom 20px
-		@media(max-width 360px)
-			&__title
-				font-size 25px
-				line-height 35px
-			&__instructions
-				font-size 14px
-				line-height 25px
+	@media(max-width 360px)
+		&__title
+			font-size 25px
+			line-height 35px
+		&__instructions
+			font-size 14px
+			line-height 25px
+		&__input-wrap
+			margin-right 0
+		&__conf
+			width 100%
+			font-size 12px
+			line-height 16px
