--- a/app/blocks/marked-list/marked-list.styl
+++ b/app/blocks/marked-list/marked-list.styl
@@ -13,3 +13,12 @@
 	&__item
 		margin-bottom 10px
 		padding-left 25px
+	@media(max-width 600px)
+		margin-top 30px
+		&__title
+			padding-bottom 20px
+			font-size 24px
+		&__list
+			font-size 16px
+			line-height 20px
+			text-align justify
