--- a/app/blocks/numered-list/numered-list.styl
+++ b/app/blocks/numered-list/numered-list.styl
@@ -24,5 +24,16 @@
 			content counter(number)
 			counter-increment number
 			color $blue
-
+	@media(max-width 600px)
+		margin-top 20px
+		&__title
+			padding-bottom 20px
+			font-size 24px
+		&__list
+			font-size 16px
+			line-height 20px
+			text-align justify
+		&__item
+			&:before
+				font-size 16px
 			
