--- a/app/blocks/quote/quote.styl
+++ b/app/blocks/quote/quote.styl
@@ -19,3 +19,9 @@
 		border-radius 50%
 		transform translate(-50%, -50%)
 		box-shadow -5px 3px 10px $blue
+	@media(max-width 600px)
+		margin-top 20px
+		padding 20px 25px
+		font-size 16px
+		line-height 20px
+		text-align justify
