--- a/app/blocks/repost/repost.styl
+++ b/app/blocks/repost/repost.styl
@@ -17,3 +17,8 @@
 		font-family 'Oswald'
 		font-size 26px
 		line-height 40px
+	@media(max-width 600px)
+		margin-top 20px
+		&__descussion
+			line-height 18px
+			text-align justify
