адаптация слайдера от 800рх и меньше
убрала слайдер в принципе, слайды показываются отдельными блоками

--- a/app/blocks/slider/slider.jade
+++ b/app/blocks/slider/slider.jade
@@ -27,6 +27,14 @@ mixin slider()
 				+e('img').btn-img(src='/assets/images/left.png')
 			+e('button').btn-next
 				+e('img').btn-img(src='/assets/images/right.png')
+		+e.slide-mobile
+			+e('img').img(src='/assets/images/slide1.png')
+			+e('p').slide-title 
+				+e('a').slide-link(href='#') Как проверить уровень настройки рекламной компании конкурента
+		+e.slide-mobile
+			+e('img').img(src='/assets/images/slide2.png')
+			+e('p').slide-title 
+				+e('a').slide-link(href='#') Вся правда о второстепенных показателях в контекстной рекламе
 
 
 		
