--- a/app/blocks/repost/repost.styl
+++ b/app/blocks/repost/repost.styl
@@ -22,3 +22,8 @@
 		&__descussion
 			line-height 18px
 			text-align justify
+		&__title
+			margin-top 20px
+			margin-bottom 20px
+			font-size 20px
+			line-height 30px
