--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -7,6 +7,8 @@
 		font-size 55px
 		font-weight 500
 		line-height 60px
+	&__slide-mobile
+		display none
 	&__slider-container
 		width 100%
 		height 330px
@@ -47,3 +49,27 @@
 	&__btn-next
 		right 0
 		transform translate(30px, -50%)
+	@media(max-width 1080px)
+		margin-top 60px // поменять когда поправится виджет ВК
+		margin-bottom 40px
+	@media(max-width 800px)
+		margin-top 20px
+		&__slide-mobile
+			margin-bottom 20px
+			display block
+		&__img
+			width 100%
+		&__slider-container
+			display none
+	@media(max-width 600px)
+		&__title
+			margin-bottom 30px
+			font-size 35px
+			line-height 40px
+	@media(max-width 360px)
+		&__slide-title
+			padding-top 0
+			font-size 16px
+			line-height 20px
+	
+
