Адаптирован хедер, кроме мобильного меню

--- a/app/blocks/header-action/header-action.jade
+++ b/app/blocks/header-action/header-action.jade
@@ -11,7 +11,7 @@ mixin header-action()
 				+e('a').e-mail(href='#') info@честный-контекст.рф
 			+e.call
 				+call()
-				+phone()
+				+phone()._header
 		+nav([
 			{name:'Главная', href:'#'},
 			{name:'Бесплатный аудит честности', href:'#'},
