--- a/app/blocks/header-action/header-action.styl
+++ b/app/blocks/header-action/header-action.styl
@@ -43,3 +43,16 @@
 		color #90a4ae
 		&_colored
 			color $blue
+	@media(max-width 1265px)
+		&__call
+			width 60%
+	@media(max-width 1120px)
+		margin-left 30px
+	@media(max-width 740px)
+		&__call
+			width auto
+	@media(max-width 660px)
+		margin-left 0
+
+	
+
