--- a/app/blocks/header-main/header-main.styl
+++ b/app/blocks/header-main/header-main.styl
@@ -52,3 +52,22 @@
 		font-size 55px
 		font-weight 500
 		line-height 60px
+	@media(max-width 1120px)
+		width 100%
+	@media(max-width 800px)
+		&__title
+			margin-top 20px
+			font-size 35px
+			line-height 40px
+		&__item
+			font-size 12px
+	@media(max-width 600px)
+		&__path
+			display none
+		&__title
+			margin-top 10px
+			font-size 25px
+			line-height 30px
+	@media(max-width 400px)
+		&__title
+			font-size 20px
