--- a/app/blocks/nav/nav.styl
+++ b/app/blocks/nav/nav.styl
@@ -21,5 +21,11 @@
 	&__link
 		&:hover
 			color $blue
+	@media(max-width 800px)
+		&__item
+			font-size 18px
+	@media(max-width 660px)
+		&__item
+			font-size 16px
 		
 	
