--- a/app/blocks/header-main/header-main.styl
+++ b/app/blocks/header-main/header-main.styl
@@ -62,10 +62,11 @@
 		&__item
 			font-size 12px
 	@media(max-width 600px)
+		margin-top 0
 		&__path
 			display none
 		&__title
-			margin-top 10px
+			margin-top 0
 			font-size 25px
 			line-height 30px
 	@media(max-width 400px)
