--- a/app/blocks/header-top/header-top.styl
+++ b/app/blocks/header-top/header-top.styl
@@ -1,2 +1,12 @@
 .header-top
-	display flex
+	&__desktop
+		display flex
+	&__mobile
+		display none
+		justify-content space-between
+		align-items center
+	@media(max-width 580px)
+		&__desktop
+			display none
+		&__mobile
+			display flex
