кнопка бургер-меню
кнопка закреплена, добавлен фон при скролле, чтобы не сливалась со страницей

--- a/app/blocks/burger-menu/burger-menu.jade
+++ b/app/blocks/burger-menu/burger-menu.jade
@@ -1,6 +1,7 @@
 mixin burger-menu()
 	+b.burger-menu&attributes(attributes)
-		+e('span').line
-		+e('span').line
-		+e('span').line
-		+e('span').line
+		+e.wrap
+			+e('span').line
+			+e('span').line
+			+e('span').line
+			+e('span').line
