--- a/app/blocks/burger-menu/burger-menu.styl
+++ b/app/blocks/burger-menu/burger-menu.styl
@@ -2,9 +2,16 @@
 	position fixed
 	z-index 10
 	right 10px
-	width 45px
-	height 35px
+	padding 15px 10px
 	cursor pointer
+	background-color transparent
+	border-radius 50%
+	&_scrolled
+		background-color #f5f8ff
+	&__wrap
+		position relative
+		width 45px
+		height 35px
 	&__line
 		position absolute
 		left 0
