--- a/app/blocks/burger-menu/burger-menu.jade
+++ b/app/blocks/burger-menu/burger-menu.jade
@@ -5,3 +5,9 @@ mixin burger-menu()
 			+e('span').line
 			+e('span').line
 			+e('span').line
+		+e.links
+			+e('a').link(href='#') Главная
+			+e('a').link(href='#') Бесплатный аудит честности
+			+e('a').link(href='#') Арбитраж
+			+e('a').link(href='#') Авторский блок
+			+e('a').link(href='#') Контакты
