--- a/app/blocks/page-main/page-main.jade
+++ b/app/blocks/page-main/page-main.jade
@@ -7,6 +7,7 @@ include /blocks/copyrights/copyrights
 
 mixin page-main()
 	+b.page-main&attributes(attributes)
+		+e.overlay
 		+e.header-wrap
 			+container()
 				+header()
