--- a/app/blocks/page-main/page-main.styl
+++ b/app/blocks/page-main/page-main.styl
@@ -14,7 +14,7 @@
 		transition .3s ease-in
 		&_active
 			visibility visible
-			background-color rgba(0,0,0,.2)
+			background-color rgba(0, 0, 0, .2)
 	&__header-wrap
 		background-image url('/assets/images/header-bg.jpg')
 		background-size cover
