--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -5,5 +5,6 @@ import('helpers/svg-size')
 @import 'helpers/fonts'
 @import 'helpers/optimize'
 @import '../../node_modules/swiper/dist/css/swiper.min.css'
+@import '../../node_modules/jquery-scrollToTop/dist/css/scrollToTop.css'
 
 import('../blocks/**/*')
