--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -11,7 +11,6 @@
 		display none
 	&__slider-container
 		width 100%
-		height 330px
 	&__slide
 		width 100%
 	&__slide-title
@@ -25,6 +24,9 @@
 		&:hover
 			text-decoration underline
 	&__img
+		position relative
+		width 100%
+	&__wrapper
 		position relative
 	&__btn-img
 		padding 16px 18px
@@ -59,8 +61,9 @@
 			display block
 		&__img
 			width 100%
-		&__slider-container
+		&__wrapper
 			display none
+
 	@media(max-width 600px)
 		&__title
 			margin-bottom 30px
